Fix autditable subconfigs